tests/invalid/ref_to_implicit_pred.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module ref_to_implicit_pred.
:- interface.

:- pred test is det.

:- implementation.

test :- fail.
   p(test,
   p(test,
   test)).
